src/test/ui/union/union-derive-eq.stderr
error[E0277]: the trait bound `PartialEqNotEq: Eq` is not satisfied
  --> $DIR/union-derive-eq.rs:13:5
   |
LL |     a: PartialEqNotEq,
   |     ^^^^^^^^^^^^^^^^^ the trait `Eq` is not implemented for `PartialEqNotEq`
   | 
  ::: $SRC_DIR/core/src/cmp.rs:LL:COL
   |
LL | pub struct AssertParamIsEq<T: Eq + ?Sized> {
   |                               -- required by this bound in `AssertParamIsEq`
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
